fix map z-index

--- a/css/livestream-styles.css
+++ b/css/livestream-styles.css
@@ -1,7 +1,6 @@
 /*MAP STYLES*/
 .mapSize{height:400px;}
 hr.popup{margin: 3px auto}
-.mt3{margin-top:3rem;}
 .center{text-align:center;}
 .fn-preview>div>h4{color:#0099D8}
 .leaflet-container{background:#fff;}
@@ -10,7 +9,6 @@ div.leaflet-control.full-screen:hover{background-color:#f4f4f4!important;}
 div.leaflet-control.home-zoom:hover{background-color:#f4f4f4!important;}
 .full-screen{position:absolute;top:80px;left:10px;font-size:1.5em;}
 .home-zoom{position:absolute;top:123px;left:10px;font-size:1.25em;}
-#map-id{z-index:1!important;}
 
 /*GAUGE STYLES*/
 .gaugeBox{background-color:#efefef;margin:0 1px;padding:15px;}
